--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,6 +28,9 @@
     <header class="bg-blue-600 text-white py-2 px-5 flex justify-end">
       <div class="flex justify-end gap-4 items-center">
         <div>
+          <%= link_to 'game scores',  game_path %>  
+        </div>
+        <div>
           <%= link_to 'game',  "http://127.0.0.1:5000/#{Current.user.username}" %>  
         </div>
         <div>
