--- a/app/views/people/_person.html.erb
+++ b/app/views/people/_person.html.erb
@@ -30,7 +30,7 @@
 
     <td class="text-left px-4">
 
-    <%= person.role.name %>
+    <%= person.profile.role.name %>
   </td >
 
   <td class="text-left px-4">
