--- a/app/views/people/index.html.erb
+++ b/app/views/people/index.html.erb
@@ -7,7 +7,7 @@
   <% content_for :title, "People" %>
 
 <%# <%= Current.user.role.id%> 
-<% if Current.user&.role&.id == 1%>
+<% if Current.profile&.role&.name == 'admin'%>
   <div class="flex justify-between items-center">
     <h1 class="font-bold text-4xl">People</h1>
     <%= link_to "New person", new_person_path, class: "rounded-lg py-3 px-5 bg-blue-600 text-white block font-medium" %>
