--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,6 +33,9 @@
           </div>
         <%end%>
         <div class="underline">
+          <%= link_to 'people',  people_path %>  
+        </div>
+        <div class="underline">
           <%= link_to 'game scores',  game_path %>  
         </div>
         <div class="underline">
